# CaptureKVM

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build_debug.bat  run.bat  run_debug.bat
build-wsl/: Makefile  cmake_install.cmake
include/: Application.hpp  AudioPlayback.hpp  D3DRenderer.hpp  DeviceEnumeration.hpp  DirectShowCapture.hpp  InputCapture.hpp  MicrophoneCapture.hpp  SerialStreamer.hpp  Settings.hpp
src/: Application.cpp  AudioPlayback.cpp  D3DRenderer.cpp  DeviceEnumeration.cpp  DirectShowCapture.cpp  InputCapture.cpp  MicrophoneCapture.cpp  OverlayUI.cpp  OverlayUI.hpp  SerialStreamer.cpp  Settings.cpp  main.cpp
